bring in new status alias and add specific global user config

--- a/.gitconfig
+++ b/.gitconfig
@@ -3,6 +3,8 @@
 	l = log --pretty=oneline -n 20 --graph --abbrev-commit
 	# View the current working tree status using the short format
 	s = status -s
+	# View the current working tree status using the long format
+	sl = status
 	# Show the diff between the latest commit and the current state
 	d = !"git diff-index --quiet HEAD -- || clear; git --no-pager diff --patch-with-stat"
 	# `git di $number` shows the diff between the state `$number` revisions ago and the current state
@@ -79,4 +81,4 @@
 
 [user]
 	email = yardley@gmail.com
-	
+	name = Tim Yardley
